# noter-desktop

./: README.md  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
src/: main.tsx  styles.css  welcome.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  utils.rs
src-tauri/src/commands/: create_file.rs  delete_entry.rs  delete_file.rs  get_directory.rs  get_file.rs  get_graph.rs  mod.rs  put_file.rs  refresh.rs  welcome_startup.rs
src-tauri/src/state/: mod.rs  noter_state.rs
src-tauri/src/types/: config.rs  data_adapter.rs  file_graph.rs  file_manager.rs  id.rs  metadata.rs  mod.rs
src-tauri/src/types/file_previews/: file_preview.rs  mod.rs
src-tauri/src/types/files/: directory.rs  file.rs  image.rs  mod.rs  note.rs  table.rs  todo_list.rs
src/lib/: keyboardShortcuts.ts
src/state/: state.ts
src/types/: directory.ts  file.ts  id.ts  metadata.ts  note.ts
src/types/commands/: createFile.ts  deleteFile.ts  getDirectory.ts  getFile.ts  putFile.ts  refresh.ts
src/types/filePreview/: filePreview.ts
src/types/files/: directory.ts  file.ts  graph.ts  note.ts  todo-list.ts
src/ui/: App.tsx  CreateNote.tsx  Note.tsx  Sidebar.tsx  Titlebar.tsx  Welcome.tsx  Workspace.tsx
src/ui/Editor/: index.tsx  theme.ts
src/ui/Editor/nodes/: LinkNode.ts
src/ui/Editor/plugins/: InternalLinkPlugin.tsx  index.tsx
src/ui/Editor/plugins/Markdown/: MarkdownShortcuts.tsx
static/: index.html  welcome.html
